fix(Footer): Align icons, closes #274

--- a/_sass/components/footer.scss
+++ b/_sass/components/footer.scss
@@ -203,7 +203,6 @@ input:checked + .app-footer_pre-menu:after {
   }
 
   img {
-    margin-top: 0.2em;
     margin-right: 0.5em;
   }
 }
